--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -9,16 +9,48 @@ on:
       - main
 
 jobs:
-  build_images:
+  # 1. Dedicated job to build and push the base image FIRST
+  build_base_image:
+    name: Build & Push Base Image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU (for multi-arch if needed)
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker registry
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build & push base image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./base
+          file: ./base/Dockerfile
+          push: true
+          tags: jaybhu05/open5gs-base:latest
+          cache-from: type=registry,ref=jaybhu05/open5gs-base:latest
+          cache-to: type=inline
+
+  # 2. Job for all other dependent images, which runs ONLY AFTER the base image is ready
+  build_dependent_images:
     name: Build & Push ${{ matrix.service }}
+    needs: build_base_image # Ensure base image is finished pushing before starting dependents
     runs-on: ubuntu-latest
     
-    # Define the services to be built and pushed using a matrix
+    # Define the services to be built and pushed using a matrix (excluding 'base')
     strategy:
-      fail-fast: false # Allows other services to continue building if one fails
+      fail-fast: false
       matrix:
-        service: [base, nrf, udm, ausf, pcf, amf, smf, upf]
-        repository: [jaybhu05] # Centralize the repository name
+        service: [nrf, udm, ausf, pcf, amf, smf, upf] # 'base' service removed
+        repository: [jaybhu05]
 
     steps:
       - name: Checkout repository
@@ -48,7 +80,7 @@ jobs:
           # Tags are defined using the matrix service name
           tags: ${{ matrix.repository }}/open5gs-${{ matrix.service }}:latest
 
-          # --- FIX: Pass the fully qualified base image name as a build argument ---
+          # --- CRITICAL FIX: Pass the fully qualified base image name as a build argument ---
           build-args: |
             BASE_IMAGE_NAME=${{ matrix.repository }}/open5gs-base:latest
             
@@ -58,7 +90,7 @@ jobs:
 
   deploy:
     name: Deploy to Server
-    needs: build_images # This job waits until ALL images in build_images are successful
+    needs: build_dependent_images # Update dependency to the new job name
     runs-on: ubuntu-latest
     
     steps:
